--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" />
-<link rel="stylesheet" type="text/css" href="/static/assets/css/screen.css?v=23c118cee3" />
+<link rel="stylesheet" type="text/css" href="//plusplus7.com/static/assets/css/screen.css?v=23c118cee3" />
 <script>
 
 var ws = new WebSocket('ws://localhost:7070/controlcenter');
